force-app/main/default/objects/Direccion__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>