force-app/main/default/objects/Direccion__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <label>Bloque / Depto / Otro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>