force-app/main/default/objects/Direccion__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <formula>Street__c &amp; &quot;, &quot; &amp; Comuna__c &amp; &quot;, &quot; &amp; Ciudad__c</formula>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>