force-app/main/default/objects/Direccion__c/fields/GlblLocNum__c.field-meta.xml
<CustomField>
    <fullName>GlblLocNum__c</fullName>
    <label>GPS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>