force-app/main/default/objects/Direccion__c/fields/LicTradNum__c.field-meta.xml
<CustomField>
    <fullName>LicTradNum__c</fullName>
    <label>RUT Cuenta</label>
    <length>32</length>
    <type>Text</type>
</CustomField>