force-app/main/default/objects/Direccion__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <defaultValue>&quot;CL&quot;</defaultValue>
    <inlineHelpText>Código País (ISO 2)</inlineHelpText>
    <label>País</label>
    <length>2</length>
    <type>Text</type>
</CustomField>