force-app/main/default/objects/Direccion__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>I - Tarapacá</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>II - Antofagasta</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>III - Atacama</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>IV - Coquimbo</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>V - Valparaíso</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>VI - O&apos;Higgins</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>VII - Maule</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>VIII - Bío Bío</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>IX - Araucanía</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>X - Los Lagos</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>XI - Aysén</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>XII - Magallanes y Antártica Chilena</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Metropolitana</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>XIV - Los Ríos</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>XV - Arica y Parinacota</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>XVI - Ñuble</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>