force-app/main/default/objects/Direccion__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Calle / Núm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>