force-app/main/default/objects/Direccion__c/fields/StreetNo__c.field-meta.xml
<CustomField>
    <fullName>StreetNo__c</fullName>
    <label>Número de la calle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>