force-app/main/default/objects/Direccion__c/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <label>Indicador de impuestos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVA</fullName>
                <default>true</default>
                <label>IVA</label>
            </value>
            <value>
                <fullName>IVA-Exento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>